--- a/index.html
+++ b/index.html
@@ -16,19 +16,26 @@
 
   <section class="cars">
     <div class="car">
-      <img src="car1.jpg" alt="2017 Honda Civic"/>
-      <h2>2017 Honda Civic</h2>
-      <p>Mileage: 45,000 miles</p>
-      <p>Price: £10,500</p>
-      <p>Condition: Excellent, single owner, no accidents</p>
-    </div>
-
-    <div class="car">
-      <img src="car2.jpg" alt="2015 Toyota Camry"/>
-      <h2>2015 Toyota Camry</h2>
-      <p>Mileage: 60,000 miles</p>
-      <p>Price: £9,200</p>
-      <p>Condition: Great, well maintained</p>
+      <img src="mini-cooper.jpg" alt="Mini Cooper 1.6 Petrol">
+      <h2>Mini Cooper 1.6 Petrol – ULEZ FREE</h2>
+      <p>Mileage: 75,000 miles</p>
+      <p><strong>Price:</strong> Contact for price</p>
+      <p>
+        This vehicle comes in overall good condition for its age. Drives as it should with no issues, always serviced on time,
+        with full service history and service book. Passed the last two MOTs with no advisories.
+      </p>
+      <ul>
+        <li>ULEZ FREE</li>
+        <li>FULL SERVICE HISTORY</li>
+        <li>LOW MILEAGE – 75K</li>
+        <li>10 Months MOT</li>
+        <li>Half leather seats</li>
+        <li>Reverse camera</li>
+        <li>Air Conditioning (AC)</li>
+        <li>AUX / Bluetooth</li>
+        <li>Full V5 Present</li>
+      </ul>
+      <a href="mailto:sales@usedcars.com?subject=Enquiry about Mini Cooper 1.6 Petrol" class="contact-btn">Contact Seller</a>
     </div>
   </section>
 
